k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dquiz-backend
  namespace: dquiz
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dquiz-backend
  template:
    metadata:
      labels:
        app: dquiz-backend
    spec:
      containers:
        - name: backend
          image: devil/dquiz-backend-1:latest   # CHANGE THIS to your real image
          ports:
            - containerPort: 5000
          imagePullPolicy: Always
