k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dquiz-frontend
  namespace: dquiz
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dquiz-frontend
  template:
    metadata:
      labels:
        app: dquiz-frontend
    spec:
      containers:
        - name: frontend
          image: devil/dquiz-frontend-1:latest   # CHANGE THIS to your real image
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
