k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dquiz-ingress
  namespace: dquiz
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dquiz-frontend-service
                port:
                  number: 3000

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: dquiz-backend-service
                port:
                  number: 5000
